package com.zpy.yearn.pennTree;

/**
 * Created by zpy on 2018/9/21.
 */
public enum SyntacPhrase implements Tag {
    ADJP,
    ADVP,
    CLP,
    CP,
    DFL,
    DNP,
    DP,
    DVP,
    FRAG,
    IP,
    LCP,
    LST,
    MSP,
    NP,
    PP,
    PRN,
    QP,
    UCP,
    VP,
    VPT;
}
