package com.zpy.yearn.pennTree;

/**
 * Created by zpy on 2018/9/15.
 */
public enum WordTag implements Tag {
    AD,
    AS,
    BA,
    CC,
    CD,
    CS,
    DEC,
    DEG,
    DER,
    DEV,
    DT,
    ETC,
    FW,
    IJ,
    JJ,
    LB,
    LC,
    M,
    MSP,
    NN,
    NR,
    NT,
    OD,
    ON,
    P,
    PN,
    PU,
    SB,
    SP,
    VA,
    VC,
    VE,
    VV,
    ;

}
