@startuml

title __PENNTREE's Class Diagram__\n

  package  {
    package com.zpy.yearn.pennTree {
      class Leaf {
          - leafString : String
          - tag : String
          - word : String
          + Leaf()
          + getTag()
          + getWordTag()
          + getWord()
          + invoke()
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      enum SyntacPhrase {
        ADJP
        ADVP
        CLP
        CP
        DNP
        DP
        DVP
        FRAG
        IP
        LCP
        LST
        MSP
        NP
        PP
        PRN
        QP
        UCP
        VP
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      interface Tag {
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      class TreeFacade {
          {static} - logger : Logger
          {static} + getLastWordNoTag()
          {static} + getLastWord()
          {static} + filterByWordTag()
          {static} + printLeafString()
          {static} + getLeafString()
          {static} + getCheckedLeaf()
          {static} + getLeaf()
          {static} + getWordTag()
          {static} + getCheckedWordTag()
          {static} + getSyncTag()
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      class TreeTraverseContext {
          - prettyPrint : StringBuilder
          - depth : int
          + incrementDepth()
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      class TreeTraverser {
          {static} - logger : Logger
          {static} + prettyPrintTree()
          {static} + traverseTreeNode()
          {static} - traverseTreeNode()
          {static} - traverseTreeNode()
          {static} - printNode()
          {static} - traverseChildren()
      }
    }
  }
  

  package  {
    package com.zpy.yearn.pennTree {
      enum WordTag {
        AD
        AS
        BA
        CC
        CD
        CS
        DEC
        DEG
        DER
        DEV
        DT
        ETC
        FW
        IJ
        JJ
        LB
        LC
        M
        MSP
        NN
        NR
        NT
        OD
        ON
        P
        PN
        PU
        SB
        SP
        VA
        VC
        VE
        VV
      }
    }
  }
  

  SyntacPhrase -up-|> Tag
  WordTag -up-|> Tag


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
